--- a/index.html
+++ b/index.html
@@ -9,18 +9,34 @@
     <title>My site</title>
 </head>
 
-<body>
-
-    <h1 class="display-1">Hello World</h1>
-    <div class="bg-primary p-5">Primary</div>
-    <div class="bg-secondary p-5">Secondary</div>
-    <div class="bg-success p-5">Success</div>
-    <div class="bg-info p-5">Info</div>
-    <div class="bg-warning p-5">Warning</div>
-    <div class="bg-danger p-5">Danger</div>
-    <div class="bg-light p-5">Light</div>
-    <div class="bg-dark p-5">Dark</div>
-
+<body class="bg-dark">
+    <!-- NAV BAR SECTION -->
+    <nav class="navbar navbar-expand-lg navbar-dark menu p-4">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="./assets/images/logo_color.svg" alt="logo" width="53" height="52"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link px-2" href="#">About</a>
+                    </li>
+                    <li class="nav-item px-2">
+                        <a class="nav-link" href="#">Tools</a>
+                    </li>
+                    <li class="nav-item px-2">
+                        <a class="nav-link" href="#">Projects</a>
+                    </li>
+                    <li class="nav-item px-2">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- END NAV BAR SECTION -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 
