added intro section

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <!-- NAV BAR SECTION -->
     <nav class="navbar navbar-expand-lg navbar-dark menu p-4">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="./assets/images/logo_color.svg" alt="logo" width="53" height="52"></a>
+            <a class="navbar-brand" href="#"><img src="./assets/images/logo_color.svg" alt="logo" width="53"
+                    height="52"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"""></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
@@ -37,6 +38,22 @@
         </div>
     </nav>
     <!-- END NAV BAR SECTION -->
+    <!-- MAIN SECTION -->
+    <main class="container-fluid">
+        <!-- INTRO SECTION -->
+        <section class="container intro-section row">
+            <div class="align-self-center text-light" id="intro">
+                
+                <p class="lead">Hello World...<br><br>
+                    My name is Jeremy,<br> 
+                    I'm a <strong class="text-primary"> software developer</strong>
+                </p>
+            </div>
+        </section>
+        <!-- END INTRO SECTION -->
+    </main>
+    <!-- END MAIN SECTION -->
+    <script src="assets/js/custom.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 
