--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,29 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <title>Jeremy Aubrey</title>
 </head>
+
 <body>
-    <h1>Hello World</h1>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand ms-4" href="#">Jeremy Aubrey</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end p-3" id="navbarNavAltMarkup">
+                    <div class="navbar-nav me-4">
+                        <a class="nav-link" aria-current="page" href="#">Projects</a>
+                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#">Tools</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+    
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
