added about section

--- a/index.html
+++ b/index.html
@@ -21,15 +21,36 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end p-3" id="navbarNavAltMarkup">
                     <div class="navbar-nav me-4">
-                        <a class="nav-link" aria-current="page" href="#">Projects</a>
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#about-section">About</a>
+                        <a class="nav-link" href="#">Projects</a>
                         <a class="nav-link" href="#">Tools</a>
                     </div>
                 </div>
             </div>
         </nav>
     </header>
-    
+    <main>
+        <section class="container" id="about-section">
+            <h1 class="display3 my-4">About me</h1>
+            <div class="row justify-content-md-center">
+                <div class="col-lg-6">
+                    <img src="assets/images/me.jpg" class="img-fluid border border-dark rounded p-3" alt="...">
+                </div>
+                <div class=" col-lg-6 border border-dark rounded p-4">
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, cupiditate. Nesciunt
+                        fuga
+                        atque itaque cupiditate distinctio, maxime modi? Earum quos nemo debitis est dolore pariatur
+                        sunt
+                        perspiciatis similique, dignissimos odit porro architecto officiis expedita natus reiciendis
+                        nisi,
+                        quaerat reprehenderit totam deserunt quibusdam dolor, labore corrupti iusto! Quis aperiam
+                        delectus
+                        aliquid iusto ad! Veritatis sapiente sequi esse dolores nemo eligendi, in veniam magni fugiat
+                    </p>
+                </div>
+            </div>
+        </section>
+    </main>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 
