--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="sticky-top shadow">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand ms-4" href="#">Jeremy Aubrey</a>
@@ -21,8 +21,8 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end p-3" id="navbarNavAltMarkup">
                     <div class="navbar-nav me-4">
-                        <a class="nav-link" href="#about-section">About</a>
-                        <a class="nav-link" href="#">Projects</a>
+                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#projects-section">Projects</a>
                         <a class="nav-link" href="#">Tools</a>
                     </div>
                 </div>
@@ -30,7 +30,7 @@
         </nav>
     </header>
     <main>
-        <section class="container" id="about-section">
+        <section class="container mb-5" id="about-section">
             <h1 class="display3 my-4">About me</h1>
             <div class="row justify-content-md-center">
                 <div class="col-lg-6">
@@ -47,6 +47,37 @@
                         delectus
                         aliquid iusto ad! Veritatis sapiente sequi esse dolores nemo eligendi, in veniam magni fugiat
                     </p>
+                </div>
+            </div>
+        </section>
+        <section class="container" id="projects-section">
+            <h1 class="display3 my-4">Projects</h1>
+            <div class="row justify-content-md-center">
+                <div class="card col-lg-4 rounded">
+                    <div class="card-body">
+                        <h5 class="card-title">Project title</h5>
+                        <p class="card-text">Project Description</p>
+                        <p class="card-text">Technologies</p>
+                        <a href="#" target="_blank" class="btn btn-primary">Github</a>
+                    </div>
+                </div>
+
+                <div class="card col-lg-4 rounded">
+                    <div class="card-body">
+                        <h5 class="card-title">Project title</h5>
+                        <p class="card-text">Project Description</p>
+                        <p class="card-text">Technologies</p>
+                        <a href="#" target="_blank" class="btn btn-primary">Github</a>
+                    </div>
+                </div>
+
+                <div class="card col-lg-4 rounded">
+                    <div class="card-body">
+                        <h5 class="card-title">Project title</h5>
+                        <p class="card-text">Project Description</p>
+                        <p class="card-text">Technologies</p>
+                        <a href="#" target="_blank" class="btn btn-primary">Github</a>
+                    </div>
                 </div>
             </div>
         </section>
