updated projects section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <title>Jeremy Aubrey</title>
 </head>
 
@@ -31,7 +32,7 @@
     </header>
     <main>
         <section class="container mb-5" id="about-section">
-            <h1 class="display3 my-4">About me</h1>
+            <h1 class="display-3 my-4">About me</h1>
             <div class="row justify-content-md-center">
                 <div class="col-lg-6">
                     <img src="assets/images/me.jpg" class="img-fluid border border-dark rounded p-3" alt="...">
@@ -50,33 +51,44 @@
                 </div>
             </div>
         </section>
-        <section class="container" id="projects-section">
-            <h1 class="display3 my-4">Projects</h1>
-            <div class="row justify-content-md-center">
-                <div class="card col-lg-4 rounded">
-                    <div class="card-body">
-                        <h5 class="card-title">Project title</h5>
-                        <p class="card-text">Project Description</p>
-                        <p class="card-text">Technologies</p>
-                        <a href="#" target="_blank" class="btn btn-primary">Github</a>
+        <hr>
+        <section class="container mb-5" id="projects-section">
+            <h1 class="display-3 my-4">Projects</h1>
+            <div class="row row-cols-1 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card h-100 project">
+                        <div class="card-body">
+                            <h5 class="card-title">Project title</h5>
+                            <p class="card-text"><br>Lorem ipsum dolor sit, amet consectetur
+                                adipisicing elit. Accusamus quo perspiciatis, sapiente aspernatur atque omnis natus
+                                nulla ipsum. Quisquam, obcaecati?.</p><br>
+                            <p class="card-text">Technologies: </p>
+                            <a href="#" class="btn btn-primary">Github</a>
+                        </div>
                     </div>
                 </div>
-
-                <div class="card col-lg-4 rounded">
-                    <div class="card-body">
-                        <h5 class="card-title">Project title</h5>
-                        <p class="card-text">Project Description</p>
-                        <p class="card-text">Technologies</p>
-                        <a href="#" target="_blank" class="btn btn-primary">Github</a>
+                <div class="col">
+                    <div class="card h-100 project">
+                        <div class="card-body">
+                            <h5 class="card-title">Project title</h5>
+                            <p class="card-text"><br>Lorem ipsum dolor sit, amet consectetur
+                                adipisicing elit. Accusamus quo perspiciatis, sapiente aspernatur atque omnis natus
+                                nulla ipsum. Quisquam, obcaecati?.</p><br>
+                            <p class="card-text">Technologies: </p>
+                            <a href="#" class="btn btn-primary">Github</a>
+                        </div>
                     </div>
                 </div>
-
-                <div class="card col-lg-4 rounded">
-                    <div class="card-body">
-                        <h5 class="card-title">Project title</h5>
-                        <p class="card-text">Project Description</p>
-                        <p class="card-text">Technologies</p>
-                        <a href="#" target="_blank" class="btn btn-primary">Github</a>
+                <div class="col">
+                    <div class="card h-100 project">
+                        <div class="card-body">
+                            <h5 class="card-title">Project title</h5>
+                            <p class="card-text"><br>Lorem ipsum dolor sit, amet consectetur
+                                adipisicing elit. Accusamus quo perspiciatis, sapiente aspernatur atque omnis natus
+                                nulla ipsum. Quisquam, obcaecati?.</p><br>
+                            <p class="card-text">Technologies: </p>
+                            <a href="#" class="btn btn-primary">Github</a>
+                        </div>
                     </div>
                 </div>
             </div>
