project links open new tab

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 adipisicing elit. Accusamus quo perspiciatis, sapiente aspernatur atque omnis natus
                                 nulla ipsum. Quisquam, obcaecati?.</p><br>
                             <p class="card-text">Technologies: </p>
-                            <a href="#" class="btn btn-primary">Github</a>
+                            <a href="#" target="_blank" class="btn btn-primary">Github</a>
                         </div>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                                 adipisicing elit. Accusamus quo perspiciatis, sapiente aspernatur atque omnis natus
                                 nulla ipsum. Quisquam, obcaecati?.</p><br>
                             <p class="card-text">Technologies: </p>
-                            <a href="#" class="btn btn-primary">Github</a>
+                            <a href="#" target="_blank" class="btn btn-primary">Github</a>
                         </div>
                     </div>
                 </div>
@@ -87,7 +87,7 @@
                                 adipisicing elit. Accusamus quo perspiciatis, sapiente aspernatur atque omnis natus
                                 nulla ipsum. Quisquam, obcaecati?.</p><br>
                             <p class="card-text">Technologies: </p>
-                            <a href="#" class="btn btn-primary">Github</a>
+                            <a href="#" target="_blank" class="btn btn-primary">Github</a>
                         </div>
                     </div>
                 </div>
