added tools section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div class="navbar-nav me-4">
                         <a class="nav-link" href="#">About</a>
                         <a class="nav-link" href="#projects-section">Projects</a>
-                        <a class="nav-link" href="#">Tools</a>
+                        <a class="nav-link" href="#tools-section">Tools</a>
                     </div>
                 </div>
             </div>
@@ -92,6 +92,38 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <hr>
+        <section class="container mb-5" id="tools-section">
+            <h1 class="display-3 my-4">Tools</h1>
+            <div class="container">
+                <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
+                  <div class="col">
+                    <div class="p-3 tool text-center rounded">Java</div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 tool text-center rounded">SQL</div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 tool text-center rounded">Spring Boot</div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 tool text-center rounded">git</div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 tool text-center rounded">Github</div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 tool text-center rounded">HTML</div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 tool text-center rounded">CSS</div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 tool text-center rounded">Javascript</div>
+                  </div>
+                </div>
+              </div>
         </section>
     </main>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
