--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <p class="card-text"><br>Lorem ipsum dolor sit, amet consectetur
                                 adipisicing elit. Accusamus quo perspiciatis, sapiente aspernatur atque omnis natus
                                 nulla ipsum. Quisquam, obcaecati?.</p><br>
-                            <p class="card-text">Technologies: </p>
+                            <p class="card-text">Technologies: [ ... ]</p>
                             <a href="#" target="_blank" class="btn btn-primary">Github</a>
                         </div>
                     </div>
@@ -74,7 +74,7 @@
                             <p class="card-text"><br>Lorem ipsum dolor sit, amet consectetur
                                 adipisicing elit. Accusamus quo perspiciatis, sapiente aspernatur atque omnis natus
                                 nulla ipsum. Quisquam, obcaecati?.</p><br>
-                            <p class="card-text">Technologies: </p>
+                            <p class="card-text">Technologies: [ ... ]</p>
                             <a href="#" target="_blank" class="btn btn-primary">Github</a>
                         </div>
                     </div>
@@ -86,7 +86,7 @@
                             <p class="card-text"><br>Lorem ipsum dolor sit, amet consectetur
                                 adipisicing elit. Accusamus quo perspiciatis, sapiente aspernatur atque omnis natus
                                 nulla ipsum. Quisquam, obcaecati?.</p><br>
-                            <p class="card-text">Technologies: </p>
+                            <p class="card-text">Technologies: [ ... ]</p>
                             <a href="#" target="_blank" class="btn btn-primary">Github</a>
                         </div>
                     </div>
@@ -98,32 +98,35 @@
             <h1 class="display-3 my-4">Tools</h1>
             <div class="container">
                 <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
-                  <div class="col">
-                    <div class="p-3 tool text-center rounded">Java</div>
-                  </div>
-                  <div class="col">
-                    <div class="p-3 tool text-center rounded">SQL</div>
-                  </div>
-                  <div class="col">
-                    <div class="p-3 tool text-center rounded">Spring Boot</div>
-                  </div>
-                  <div class="col">
-                    <div class="p-3 tool text-center rounded">git</div>
-                  </div>
-                  <div class="col">
-                    <div class="p-3 tool text-center rounded">Github</div>
-                  </div>
-                  <div class="col">
-                    <div class="p-3 tool text-center rounded">HTML</div>
-                  </div>
-                  <div class="col">
-                    <div class="p-3 tool text-center rounded">CSS</div>
-                  </div>
-                  <div class="col">
-                    <div class="p-3 tool text-center rounded">Javascript</div>
-                  </div>
+                    <div class="col">
+                        <div class="p-3 tool text-center rounded">Java</div>
+                    </div>
+                    <div class="col">
+                        <div class="p-3 tool text-center rounded">SQL</div>
+                    </div>
+                    <div class="col">
+                        <div class="p-3 tool text-center rounded">Spring Boot</div>
+                    </div>
+                    <div class="col">
+                        <div class="p-3 tool text-center rounded">git</div>
+                    </div>
+                    <div class="col">
+                        <div class="p-3 tool text-center rounded">Github</div>
+                    </div>
+                    <div class="col">
+                        <div class="p-3 tool text-center rounded">HTML</div>
+                    </div>
+                    <div class="col">
+                        <div class="p-3 tool text-center rounded">CSS</div>
+                    </div>
+                    <div class="col">
+                        <div class="p-3 tool text-center rounded">Bootstrap</div>
+                    </div>
+                    <div class="col">
+                        <div class="p-3 tool text-center rounded">Javascript</div>
+                    </div>
                 </div>
-              </div>
+            </div>
         </section>
     </main>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
