removed border from about desc, aligned center

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             <h1 class="display-3 my-4">About me</h1>
             <div class="row justify-content-md-center">
                 <div class="col-lg-6">
-                    <img src="assets/images/me.jpg" class="img-fluid border border-dark rounded p-3" alt="...">
+                    <img src="assets/images/me.jpg" class="img-fluid border border-dark rounded p-4" alt="...">
                 </div>
-                <div class=" col-lg-6 border border-dark rounded p-4">
-                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, cupiditate. Nesciunt
+                <div class="d-flex align-items-center pt-5 px-4 col-lg-6">
+                    <p class="lead align">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, cupiditate. Nesciunt
                         fuga
                         atque itaque cupiditate distinctio, maxime modi? Earum quos nemo debitis est dolore pariatur
                         sunt
