--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="sticky-top shadow">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand ms-4" href="#">Jeremy Aubrey</a>
+                <a class="navbar-brand ms-4" href="#" id="brand">Jeremy Aubrey</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -32,13 +32,14 @@
     </header>
     <main>
         <section class="container mb-5" id="about-section">
-            <h1 class="display-3 my-4">About me</h1>
+            <h1 class="display-3 my-4">Hello world...</h1>
             <div class="row justify-content-md-center">
                 <div class="col-lg-6">
                     <img src="assets/images/me.jpg" class="img-fluid border border-dark rounded p-4" alt="...">
                 </div>
                 <div class="d-flex align-items-center pt-5 px-4 col-lg-6">
-                    <p class="lead align">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, cupiditate. Nesciunt
+                    <p class="lead align">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, cupiditate.
+                        Nesciunt
                         fuga
                         atque itaque cupiditate distinctio, maxime modi? Earum quos nemo debitis est dolore pariatur
                         sunt
@@ -47,6 +48,14 @@
                         quaerat reprehenderit totam deserunt quibusdam dolor, labore corrupti iusto! Quis aperiam
                         delectus
                         aliquid iusto ad! Veritatis sapiente sequi esse dolores nemo eligendi, in veniam magni fugiat
+                        <br><br>
+                        Education:
+                        <br>
+                        <strong>BAS Software Development</strong> - Austin Community College<br>
+                        (2021 - Current)<br><br>
+                        <strong>AAS Computer Programming</strong> - Austin Community College<br>
+                        (2019 - 2021)
+
                     </p>
                 </div>
             </div>
