cleaned up formatting, added comments

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <header class="sticky-top shadow">
+
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand ms-4" href="#" id="brand">Jeremy Aubrey</a>
@@ -29,8 +30,11 @@
                 </div>
             </div>
         </nav>
+
     </header>
+
     <main>
+        <!-- About Section -->
         <section class="container mb-5" id="about-section">
             <h1 class="display-3 my-4">Hello world...</h1>
             <div class="row justify-content-md-center">
@@ -61,6 +65,7 @@
             </div>
         </section>
         <hr>
+        <!-- Projects Section -->
         <section class="container mb-5" id="projects-section">
             <h1 class="display-3 my-4">Projects</h1>
             <div class="row row-cols-1 row-cols-lg-3 g-4">
@@ -103,6 +108,7 @@
             </div>
         </section>
         <hr>
+        <!-- Tools Section -->
         <section class="container mb-5" id="tools-section">
             <h1 class="display-3 my-4">Tools</h1>
             <div class="container">
@@ -138,6 +144,7 @@
             </div>
         </section>
     </main>
+
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 
