--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand ms-4" href="#" id="brand">Jeremy Aubrey</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                <a class="navbar-brand" href="#" id="brand">Jeremy Aubrey</a>
+                <button class="navbar-toggler me-2" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end p-3" id="navbarNavAltMarkup">
-                    <div class="navbar-nav me-4">
-                        <a class="nav-link" href="#">About</a>
-                        <a class="nav-link" href="#projects-section">Projects</a>
-                        <a class="nav-link" href="#tools-section">Tools</a>
+                    <div class="navbar-nav me-3">
+                        <a class="nav-link" data-bs-toggle="collapse"  data-bs-target="#navbarNavAltMarkup">About</a>
+                        <a class="nav-link" data-bs-toggle="collapse"  data-bs-target="#navbarNavAltMarkup">Projects</a>
+                        <a class="nav-link" data-bs-toggle="collapse"  data-bs-target="#navbarNavAltMarkup">Tools</a>
                     </div>
                 </div>
             </div>
@@ -35,7 +35,7 @@
 
     <main>
         <!-- About Section -->
-        <section class="container mb-5" id="about-section">
+        <section class="container mb-5" id="about">
             <h1 class="display-3 my-4">Hello world...</h1>
             <div class="row justify-content-md-center">
                 <div class="col-lg-6">
@@ -66,7 +66,7 @@
         </section>
         <hr>
         <!-- Projects Section -->
-        <section class="container mb-5" id="projects-section">
+        <section class="container mb-5" id="projects">
             <h1 class="display-3 my-4">Projects</h1>
             <div class="row row-cols-1 row-cols-lg-3 g-4">
                 <div class="col">
@@ -109,7 +109,7 @@
         </section>
         <hr>
         <!-- Tools Section -->
-        <section class="container mb-5" id="tools-section">
+        <section class="container mb-5" id="tools">
             <h1 class="display-3 my-4">Tools</h1>
             <div class="container">
                 <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
@@ -146,6 +146,7 @@
     </main>
 
     <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
