--- a/index.html
+++ b/index.html
@@ -42,16 +42,11 @@
                     <img src="assets/images/me.jpg" class="img-fluid border border-dark rounded p-4" alt="...">
                 </div>
                 <div class="d-flex align-items-center pt-5 px-4 col-lg-6">
-                    <p class="lead align">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, cupiditate.
-                        Nesciunt
-                        fuga
-                        atque itaque cupiditate distinctio, maxime modi? Earum quos nemo debitis est dolore pariatur
-                        sunt
-                        perspiciatis similique, dignissimos odit porro architecto officiis expedita natus reiciendis
-                        nisi,
-                        quaerat reprehenderit totam deserunt quibusdam dolor, labore corrupti iusto! Quis aperiam
-                        delectus
-                        aliquid iusto ad! Veritatis sapiente sequi esse dolores nemo eligendi, in veniam magni fugiat
+                    <p class="lead align">
+                        My name is Jeremy and I'm a software developer in Austin, TX.<br>
+        
+
+                        
                         <br><br>
                         Education:
                         <br>
